fixing js code issues, added comments to html, updated readme

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
 
 <section>
+    <!-- Quiz Box -->
     <div id="quizBox">
         <div id="questionBox" class="hide">
             <div id="question">Question</div>
@@ -26,12 +27,13 @@
             </div>
         <div id="correctOrIncorrect">answer</div>
         </div>
+        <!-- Quiz Info Box -->
     <div id="infoBox">
         <h2>JavaScript Coding Quiz</h2>
         <p>Answer the following questions within the alloted time. Any incorrect answers will reduce time by 10 seconds and deduct points.</p>
         <button id="start_btn" class="buttons">Start Quiz</button>
     </div>
-
+    <!-- Final Score and Initials -->
     <div id="finishQuizBox" class="hide">
         <h1>Quiz Complete!</h1>
         <div id="finalScore"> </div>
@@ -41,7 +43,7 @@
             <button id="submitBtn" class="buttons">Submit</button>
         </form>
     </div>
-
+    <!-- HighScores Page -->
     <div id="highScores" class="hide">
         <h1>High Scores</h1>
         <ol id="submittedScores"></ol>
