updated html button to reference function in js; added clear storage code

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="submittedScores"></div>
         <div class="buttonBox">
             <button id="goBack" class="buttons">Go Back</button>
-            <button id="clearScores" class="buttons">Clear High Scores</button>
+            <button id="clearScores" class="buttons" onclick="deleteScores()">Clear High Scores</button>
         </div>
     </div>
 </div>
